--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcE4wpK6WP4J1p1HVQacds",
+      "authorship_tag": "ABX9TyP20XKDHcWrRO1f2shaased",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -832,6 +832,408 @@
         "# マッチ演算子 `=`\n",
         "\n",
         "マッチ演算子 `=` はマッチ演算子である。 マッチ演算子を通して値を代入し、その後、マッチさせることができる。マッチすると、方程式の結果が返され、失敗すると、エラーになる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DfVC7pluKE0H",
+        "outputId": "ffac55a2-6433-485c-aad0-0fc840a72ac5"
+      },
+      "source": [
+        "!elixir -e 'IO.puts a = 1'\n",
+        "!elixir -e 'a =1; IO.puts 1 = a'\n",
+        "!elixir -e 'a =1; IO.puts 2 = a'"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "** (MatchError) no match of right hand side value: 1\n",
+            "    (stdlib 3.15) erl_eval.erl:450: :erl_eval.expr/5\n",
+            "    (stdlib 3.15) erl_eval.erl:893: :erl_eval.expr_list/6\n",
+            "    (stdlib 3.15) erl_eval.erl:408: :erl_eval.expr/5\n",
+            "    (elixir 1.12.0) lib/code.ex:656: Code.eval_string_with_error_handling/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pwxo37byKqR8",
+        "outputId": "f110f2ee-45ca-4959-a0c9-133f2406e5ad"
+      },
+      "source": [
+        "!elixir -e 'IO.inspect a = [1,2,3]'\n",
+        "!elixir -e '[a,b,c] = [1,2,3]; IO.puts c; IO.puts b'"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n",
+            "3\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y0ASVVRgLcWv"
+      },
+      "source": [
+        "上の例は、elixir は マッチ演算子 `=` があると左右がマッチするように最善を尽くす。 そのため、`[a,b,c] = [1,2,3]` で a,b,c に値が代入される。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0DmXw7wRL56_",
+        "outputId": "da139eef-593e-4057-9adf-1a688d6b2b00"
+      },
+      "source": [
+        "!elixir -e 'IO.inspect [1,2,[3,4,5]]'\n",
+        "!elixir -e '[a,b,c] = [1,2,[3,4,5]]; IO.inspect c; IO.inspect b'"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, [3, 4, 5]]\n",
+            "[3, 4, 5]\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CMKwmMRvMUVY",
+        "outputId": "202fb09e-ab9c-4a63-d4e3-41c76a3cd15e"
+      },
+      "source": [
+        "# 実験 => エラー\n",
+        "!elixir -e 'IO.insepct [a,b] = [1,2,3]'"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "** (MatchError) no match of right hand side value: [1, 2, 3]\n",
+            "    (stdlib 3.15) erl_eval.erl:450: :erl_eval.expr/5\n",
+            "    (stdlib 3.15) erl_eval.erl:893: :erl_eval.expr_list/6\n",
+            "    (stdlib 3.15) erl_eval.erl:408: :erl_eval.expr/5\n",
+            "    (elixir 1.12.0) lib/code.ex:656: Code.eval_string_with_error_handling/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PJeH48afMhZF",
+        "outputId": "5e1db2ec-a98f-407e-84da-79522fe0db4f"
+      },
+      "source": [
+        "# 実験\n",
+        "!elixir -e 'IO.inspect a = [[1,2,3]]'\n",
+        "!elixir -e 'IO.inspect [a] = [[1,2,3]]'\n",
+        "!elixir -e '[a] = [[1,2,3]]; IO.inspect a'"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1, 2, 3]]\n",
+            "[[1, 2, 3]]\n",
+            "[1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kXTCugTQMzoK",
+        "outputId": "d98c75ba-b04b-48b1-b455-5953f6c74e49"
+      },
+      "source": [
+        "# 実験 => エラー\n",
+        "!elixir -e 'IO.insepct [a,b] = [a,b]'"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[33mwarning: \u001b[0mvariable \"a\" does not exist and is being expanded to \"a()\", please use parentheses to remove the ambiguity or change the variable name\n",
+            "  nofile:1\n",
+            "\n",
+            "** (CompileError) nofile:1: undefined function a/0\n",
+            "    (stdlib 3.15) lists.erl:1358: :lists.mapfoldl/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8clX4wX5M8qW",
+        "outputId": "d7099ec0-513d-4a5f-b536-61476a57580a"
+      },
+      "source": [
+        "# 実験\n",
+        "!elixir -e 'IO.puts a = :a'\n",
+        "!elixir -e 'a = :a; IO.inspect a = a'\n",
+        "!elixir -e 'a = :a; IO.puts a = a'\n",
+        "!elixir -e 'IO.puts :b'"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a\n",
+            ":a\n",
+            "a\n",
+            "b\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ux4nZ8goNr1-"
+      },
+      "source": [
+        "アンダースコア `_` で値を無視する。 ワルドカード。\n",
+        "\n",
+        "なんでも受け付ける。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kv4acj4VN1PL",
+        "outputId": "1b9e8d22-db8e-492e-eaf2-399a0402c32e"
+      },
+      "source": [
+        "!elixir -e 'IO.inspect [1,_,_]=[1,2,3]'"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XKMEyqD9OHHi",
+        "outputId": "b2026df0-8fe8-48e0-ad83-834533a40198"
+      },
+      "source": [
+        "!elixir -e 'IO.inspect [1,_,_]=[1,\"cat\",\"dog\"]'"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, \"cat\", \"dog\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7J8qxcWUOUbR"
+      },
+      "source": [
+        "変数は、バインド (束縛、紐付け) されると変更できない。\n",
+        "\n",
+        "かと思ったらできてしまう。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NKezGeRTeIRa",
+        "outputId": "38841722-dedd-440a-bf66-9a6a9b83e518"
+      },
+      "source": [
+        "!elixir -e 'a = 1; IO.puts a = 2'"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lTmxh0zaeug0"
+      },
+      "source": [
+        "元の変数を指し示すピン演算子 (`^` カレット) がある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qUZaOkqrerqM",
+        "outputId": "730fdcbf-1855-4b32-dc77-91e10c77bdbe"
+      },
+      "source": [
+        "!elixir -e 'a = 1; IO.puts ^a = 2'"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "** (MatchError) no match of right hand side value: 2\n",
+            "    (stdlib 3.15) erl_eval.erl:450: :erl_eval.expr/5\n",
+            "    (stdlib 3.15) erl_eval.erl:893: :erl_eval.expr_list/6\n",
+            "    (stdlib 3.15) erl_eval.erl:408: :erl_eval.expr/5\n",
+            "    (elixir 1.12.0) lib/code.ex:656: Code.eval_string_with_error_handling/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dsKGlpUjfOgd"
+      },
+      "source": [
+        "メモ $\\quad$ 普通の関数型言語のように変数は変更できないルールにしてしまった方が簡単ではなかったか、と思わないでもない。 変数を不変にする、const 宣言みたいなのはないのか。\n",
+        "\n",
+        "リストは不変 immutable なので安心。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sRqOyI0XwcJl",
+        "outputId": "5c1a68f5-76bc-4738-e77f-f8769db497e7"
+      },
+      "source": [
+        "# 大文字にする capitalize\n",
+        "!elixir -e 'IO.puts name = String.capitalize \"elixir\"'"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Elixir\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FoIH56zvxcuB",
+        "outputId": "af173fcb-a285-4f86-d8ec-b7999b767364"
+      },
+      "source": [
+        "# 大文字にする upcase\n",
+        "!elixir -e 'IO.puts String.upcase \"elixir\"'"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ELIXIR\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H3WlWvj8w8nt"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
