--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9nCkh6YJIkv5vIs3lNVLh",
+      "authorship_tag": "ABX9TyOuawFDQeSYCPZ+TrlltXMl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -197,10 +197,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9cdZm6iLPKq0",
-        "outputId": "93a1e27b-6b8a-4a19-baa5-5aca94712290",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "93a1e27b-6b8a-4a19-baa5-5aca94712290"
       },
       "source": [
         "# 除算 (演算子 `/` ) は結果が整数であっても、浮動小数点数に変わる。\n",
@@ -221,10 +221,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yyo8kKEePKf9",
-        "outputId": "b87f0d1e-3898-4bcf-a443-87cf5388c0ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b87f0d1e-3898-4bcf-a443-87cf5388c0ab"
       },
       "source": [
         "# 整数除算は div で 剰余は rem\n",
@@ -257,11 +257,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ppg4ZY4JuKzY",
-        "outputId": "e29888a2-cbe0-4929-bb82-7a421b72a8b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ppg4ZY4JuKzY",
+        "outputId": "e29888a2-cbe0-4929-bb82-7a421b72a8b8"
       },
       "source": [
         "# python と比べてみる\n",
@@ -292,10 +292,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OnHdcIx3OUEB",
-        "outputId": "3eb69346-e7ae-4ffb-bb17-dedd4ff9c58c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3eb69346-e7ae-4ffb-bb17-dedd4ff9c58c"
       },
       "source": [
         "# n 進数\n",
@@ -319,11 +319,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jhmJBZ1HviIf",
-        "outputId": "d1059586-7628-47cf-f08b-b68a3ba3f011",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jhmJBZ1HviIf",
+        "outputId": "d1059586-7628-47cf-f08b-b68a3ba3f011"
       },
       "source": [
         "# 浮動小数点数\n",
@@ -369,11 +369,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jLaa6McRwPIe",
-        "outputId": "8b3876c6-f8c9-474c-a415-50c7f9a41e43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jLaa6McRwPIe",
+        "outputId": "8b3876c6-f8c9-474c-a415-50c7f9a41e43"
       },
       "source": [
         "!elixir -e 'IO.puts Float.round(2.718281828459045,3)'\n",
@@ -406,11 +406,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JiWSBaXLK540",
-        "outputId": "6c8ee87e-727c-4688-90f3-0c57e5d49cfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JiWSBaXLK540",
+        "outputId": "6c8ee87e-727c-4688-90f3-0c57e5d49cfe"
       },
       "source": [
         "!elixir -e 'IO.puts :math.exp(1)'"
@@ -484,11 +484,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yW87fNWQSnGD",
-        "outputId": "8bcadb3d-b7b0-4eab-926f-95229fbfd9e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yW87fNWQSnGD",
+        "outputId": "8bcadb3d-b7b0-4eab-926f-95229fbfd9e8"
       },
       "source": [
         "!elixir -e 'IO.puts :math.pi()'\n",
@@ -524,11 +524,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9946VMIkqIGC",
-        "outputId": "95311a69-4057-4bd9-c470-eacf124cc4e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9946VMIkqIGC",
+        "outputId": "95311a69-4057-4bd9-c470-eacf124cc4e3"
       },
       "source": [
         "!elixir -e 'IO.puts true'\n",
@@ -559,6 +559,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AvFhFs27vQJg"
+      },
+      "source": [
+        "ヘルプは次のようにやる。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FEjNnXwwrCr5"
@@ -583,11 +592,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m5L-p06OrXWz",
-        "outputId": "0a27bc33-5863-46cd-922c-8ec3b76d07ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m5L-p06OrXWz",
+        "outputId": "0a27bc33-5863-46cd-922c-8ec3b76d07ed"
       },
       "source": [
         "!elixir -e 'IO.puts :hello'\n",
@@ -621,11 +630,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Kp83TFvPdc8X",
-        "outputId": "6deb04ab-31f9-4c5e-80b8-a9c1a00ac14a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kp83TFvPdc8X",
+        "outputId": "6deb04ab-31f9-4c5e-80b8-a9c1a00ac14a"
       },
       "source": [
         "!elixir -e 'IO.puts is_atom :hello'\n",
@@ -659,11 +668,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zQtgx_c6eSWx",
-        "outputId": "b62ab922-7b39-4f4b-d260-eec67c81de83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zQtgx_c6eSWx",
+        "outputId": "b62ab922-7b39-4f4b-d260-eec67c81de83"
       },
       "source": [
         "!elixir -e 'IO.puts is_atom :math'\n",
@@ -685,11 +694,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u-__qBHwe6kK",
-        "outputId": "3e992cb0-f69d-410d-f807-a8b1000c2ed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u-__qBHwe6kK",
+        "outputId": "3e992cb0-f69d-410d-f807-a8b1000c2ed4"
       },
       "source": [
         "!elixir -e 'IO.puts is_binary \"hello\"'\n",
@@ -726,21 +735,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_sa-Ham7fiHB",
-        "outputId": "20093bfe-2272-46a6-c6fb-afefcf3ddc8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_sa-Ham7fiHB",
+        "outputId": "0b5d8c94-0716-4c32-b895-a4c324861538"
       },
       "source": [
-        "!elixir -e 'IO.inspect fn (a,b) -> a + b end'"
+        "!elixir -e 'IO.inspect fn a,b  -> a + b end'\n",
+        "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts sum.(3,4)'\n",
+        "!elixir -e 'IO.puts (fn (a,b) -> a + b end).(3,4)'\n",
+        "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function sum'\n",
+        "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function(sum, 2)'"
       ],
-      "execution_count": 20,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "#Function<43.40011524/2 in :erl_eval.expr/5>\n"
+            "#Function<43.40011524/2 in :erl_eval.expr/5>\n",
+            "7\n",
+            "7\n",
+            "true\n",
+            "true\n"
           ],
           "name": "stdout"
         }
