--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuawFDQeSYCPZ+TrlltXMl",
+      "authorship_tag": "ABX9TyMz3KlImn9u7ajLXelL4yqU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 21,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "!elixir -e 'IO.puts 3 + 3'\n",
         "!elixir -e 'IO.puts \"hello\" <> \" \" <> \"world\"'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "%%writefile temp.exs\n",
         "IO.puts \"hello\" <> \" \" <> \"world\""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
         "# 除算 (演算子 `/` ) は結果が整数であっても、浮動小数点数に変わる。\n",
         "!elixir -e 'IO.puts 10 / 2'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         "!elixir -e 'IO.puts rem -10, 3'\n",
         "!elixir -e 'IO.puts rem 10, -3'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         "print (-10 % 3)\n",
         "print (10 % -3)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
         "!elixir -e 'IO.puts 0o10'\n",
         "!elixir -e 'IO.puts 0xFF'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +330,7 @@
         "!elixir -e 'IO.puts 1.0'\n",
         "!elixir -e 'IO.puts 3.14e-2'"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
         "# Float.trunc (float, precision) はないので\n",
         "!elixir -e 'IO.puts trunc(2.718281828459045 * 1000) / 1000'"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
       "source": [
         "!elixir -e 'IO.puts :math.exp(1)'"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +495,7 @@
         "!elixir -e 'IO.puts :math.sin(:math.pi()/2)'\n",
         "!elixir -e 'IO.puts :math.log(:math.exp(2))'"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,7 +540,7 @@
         "!elixir -e 'IO.puts is_float 1.0'\n",
         "!elixir -e 'IO.puts is_number 0b1'"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
         "!elixir -e 'IO.inspect :hello'\n",
         "!elixir -e 'IO.inspect :world'"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +647,7 @@
         "!elixir -e 'IO.puts is_atom ThisIsAPen'\n",
         "!elixir -e 'IO.puts is_atom String'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
         "# !elixir -e 'IO.puts is_atom math' => error\n",
         "!elixir -e 'IO.puts :math.pow(2,100)'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
         "!elixir -e 'IO.puts byte_size \"こんにちは\"'\n",
         "!elixir -e 'IO.puts String.length \"こんにちは\"'"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,8 @@
         "# 関数\n",
         "\n",
         "関数は fn ではじめ、 end で閉じる。\n",
-        "\n"
+        "\n",
+        "作った関数は関数名、もしくは無名関数のあとにドットと括弧に引数を入れる。\n"
       ]
     },
     {
@@ -748,7 +749,7 @@
         "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function sum'\n",
         "!elixir -e 'sum = fn (a,b) -> a + b end; IO.puts is_function(sum, 2)'"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,6 +759,170 @@
             "7\n",
             "true\n",
             "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d-wbqomEXdav"
+      },
+      "source": [
+        "キャプチャー演算子 `&`\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q2pjSx8CXoT4",
+        "outputId": "361f1ec1-155d-4000-9f3c-d7cf18f95713",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'sum = &(&1 + &2); IO.puts sum.(3,4)'\n",
+        "!elixir -e 'sum = &(&1 + &2); double = &(sum.(&1,&1)); IO.puts double.(7)'"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n",
+            "14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cNA8dW64Ye1B",
+        "outputId": "ffd7217a-ed8b-4534-e198-d24e9e977f3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.puts (&(&1+&2)).(3,4)'"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y8lMsz7iZBU7",
+        "outputId": "504ad04d-3b02-4559-932c-a0d3e534417e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 質問 次の無名関数をキャプチャー演算子を使って書けるか\n",
+        "!elixir -e 'IO.puts (fn -> _x = 1 end).()'"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "** (CompileError) nofile:1: invalid args for &, expected an expression in the format of &Mod.fun/arity, &local/arity or a capture containing at least one argument as &1, got: _x = 1\n",
+            "    (stdlib 3.15.1) lists.erl:1358: :lists.mapfoldl/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iq7DuP8fZjAb"
+      },
+      "source": [
+        "# リスト"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JA5dJ0jCZpSF",
+        "outputId": "0a2af3a6-8b10-48d2-8de1-2662b15ba389",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect list = [3.14, :pie, true, \"Apple\"]'"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3.14, :pie, true, \"Apple\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QE88z7fYbNOz",
+        "outputId": "77757e29-0b19-4f72-a236-d66ed492e9b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list = [3.14, :pie, true, \"Apple\"];IO.puts length(list)'"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sj9eiF7bbYoq",
+        "outputId": "984b2748-20cc-44be-8450-2952b7ac5ba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect list = [3.14, :pie, true, \"Apple\"] ++ [\"Cherry\"]'\n",
+        "!elixir -e 'IO.inspect list = [3.14, :pie, true, \"Apple\"] -- [true, false]'"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3.14, :pie, true, \"Apple\", \"Cherry\"]\n",
+            "[3.14, :pie, \"Apple\"]\n"
           ],
           "name": "stdout"
         }
