--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNkIe4eaVXa7eA8yzKEYZMT",
+      "authorship_tag": "ABX9TyM7VbXnstV/+xX9JzCVDLDK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1448,13 +1448,186 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YMx7c6blzmRz"
+        "id": "YMx7c6blzmRz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce52a047-2295-4fc9-deed-a6ca56a9f81e"
       },
       "source": [
-        "!elixir -e '"
+        "# when を使った関数定義\n",
+        "!elixir -e 'is_even? =fn n when rem(n,2)==0->true;n when rem(n,2)==1->false;_->:not_integer end;IO.puts is_even?.(1)'"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "false\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X4I8HLBRNl_0",
+        "outputId": "2b856eb7-69d9-43bd-b68c-3946844abd50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 型エラーではじいてくれないので `_` で受ける必要がある\n",
+        "!elixir -e 'is_even? =fn n when rem(n,2)==0->true;n when rem(n,2)==1->false;_->:not_integer end;IO.puts is_even?.(2.0)'"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "not_integer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tuxBEcSWN-Ub"
+      },
+      "source": [
+        "# 実験\n",
+        "# !elixir -e 'IO.puts rem(2.0,2)' #=> エラー bad argument in arithmetic expression"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "embloffkOglz"
+      },
+      "source": [
+        "**cond について**\n",
+        "\n",
+        "case はひとつの値をいくつかのパターンからマッチさせて処理する。\n",
+        "\n",
+        "けれども、条件がさまざまな場合 cond を用いる。\n",
+        "\n",
+        "true と評価される条件がないとエラーになる。 最後に true の処理を加えておく。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ALm9DAq3PSKY",
+        "outputId": "3c21b0f4-c2f2-40a7-f40a-a986cb92cd9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.puts(cond do 1 > 2 -> false;is_integer(1.0) -> false;nil -> false;[1, 2, 3] -> true;true -> \"実行されない\" end)'"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0kmwCkKRPyC4",
+        "outputId": "090ac946-19b1-4592-d9dd-b07de5939a17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !elixir -e 'IO.puts(cond do 1 > 2 -> false;is_integer(1.0) -> false;nil -> false end)' #=> エラー no cond clause evaluated to a truthy value"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "** (CondClauseError) no cond clause evaluated to a truthy value\n",
+            "    (stdlib 3.15.1) erl_eval.erl:685: :erl_eval.do_apply/6\n",
+            "    (stdlib 3.15.1) erl_eval.erl:893: :erl_eval.expr_list/6\n",
+            "    (stdlib 3.15.1) erl_eval.erl:408: :erl_eval.expr/5\n",
+            "    (elixir 1.12.0) lib/code.ex:656: Code.eval_string_with_error_handling/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9wo5xl9CQCkQ",
+        "outputId": "4e2a7e76-f33a-47bf-cb00-e81f85fc8962",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.puts(cond do 1 > 2 -> false;is_integer(1.0) -> false;nil -> false;true -> \"実行されない\" end)'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "実行されない\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "po6Ej27qQK9R"
+      },
+      "source": [
+        "if と unless について\n",
+        "\n",
+        "評価する条件が 1つだけのときに if と unless を使う。\n",
+        "\n",
+        "if と unless は elixir のマクロとして定義されている。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aNrkB_Hhlh1M",
+        "outputId": "42f25cf9-7ec1-4078-dadc-15cb3c9010a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.puts (if true do \"実行する\" end)'"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "実行する\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
