--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpp+Ri8uSbd01TXoki5aOz",
+      "authorship_tag": "ABX9TyNQu8rKerp8Sgk+PXsZm4I0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1787,7 +1787,7 @@
         "# 実験 タプルにパターンマッチングは使えるか。 => 使える\n",
         "!elixir -e '{a,b,c} =  {3.14, :pie, \"Apple\"}; IO.inspect [c,a,b]'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2300,21 +2300,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iNVEmDDPQGuT"
-      },
-      "source": [
-        "# バイナリー\n",
-        "\n",
-        "わからない。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "eu5Wd8V0Smb7"
       },
       "source": [
-        "# いまここ biinary"
+        "# いまここ \n",
+        "# バイナリ binary"
       ]
     },
     {
