--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNU12YS3flBM1b16cXYhHrT",
+      "authorship_tag": "ABX9TyOb4lDGRBIhjM/H6bpktetM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         "gumi TECH Blog Elixir入門\n",
         "\n",
-        "https://dev.to/gumi/elixir-06--35na\n",
+        "https://dev.to/gumi/elixir-07--39hi\n",
         "\n",
         "を colab 化する。\n",
         "\n",
@@ -2250,6 +2250,74 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vcGwvysjrI-A",
+        "outputId": "7a3ef3f8-47ff-41a4-c608-c206c86c3a38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect to_charlist(\"hello\")' #=> 'hello'\n",
+        "!elixir -e 'IO.inspect to_charlist(\"こんにちは!!!\")' #=> [12371, 12435, 12395, 12385, 12399, 33, 33, 33]\n",
+        "!elixir -e \"IO.inspect to_string('hello')\" #=> \"hello\"\n",
+        "!elixir -e 'IO.inspect to_string([12371, 12435])' #=> \"こん\"\n",
+        "!elixir -e 'IO.inspect to_string(:hello)' #=> \"hello\"\n",
+        "!elixir -e 'IO.inspect to_string(1)' #=> \"1\""
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'hello'\n",
+            "[12371, 12435, 12395, 12385, 12399, 33, 33, 33]\n",
+            "\"hello\"\n",
+            "\"こん\"\n",
+            "\"hello\"\n",
+            "\"1\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sfr8a3Ear-gs"
+      },
+      "source": [
+        "* 文字列つまりバイナリをつなぐには `<>` 演算子を用いる\n",
+        "* 文字リストは `++` 演算子を用いる"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "udVP1fBcxf6H",
+        "outputId": "b9c2bb6d-72f9-4f1e-af58-98c17ddd98a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e \"IO.inspect 'this ' ++ 'works'\" #=> 'this works'\n",
+        "!elixir -e 'IO.inspect \"he\" <> \"llo\"' #=> \"hello\""
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'this works'\n",
+            "\"hello\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "waLVeKX3XBFK"
@@ -2259,50 +2327,216 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2VGV7B-LtNR0"
+      },
+      "source": [
+        "# キーワードリストとマップ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "udVP1fBcxf6H"
+        "id": "4gRIGbwjs4sW"
       },
       "source": [
         "\n",
+        "Elixir入門 07: キーワードリストとマップ\n",
+        "#elixir #webdev #tutorial #programming\n",
+        "gumitech profile image\n",
+        "gumi TECH\n",
+        "2018年10月30日 ・Updated on 2019年1月24日 ・4 min read\n",
+        "本稿はElixir公式サイトの許諾を得て「Keyword lists and maps」の解説にもとづき、加筆補正を加えてElixirのキーと値を関連づけたデータ構造についてご説明します。\n",
         "\n",
-        "!elixir -e 'IO.inspect to_charlist(\"hello\")'\n",
+        "値をキーに関連づけたデータ構造として、\n",
+        "Elixirにはキーワードリストとマップが備わっています。\n",
+        "他の言語で、ディクショナリーとかハッシュあるいは連想配列などと呼ばれるデータと似た仕組みです。\n",
         "\n",
-        "'hello'\n",
-        "!elixir -e 'IO.inspect to_charlist(\"拝啓\")'\n",
+        "キーワードリスト\n",
+        "多くの関数型プログラミング言語では、キーと値のデータ構造をふたつの項目のタプルで表します。Elixirでは、はじめの項目つまりキーにアトムが用いられた2項目のタプルのリストを、キーワードリストと呼びます。キーワードリストは[キー: 値]の構文で書くと便利です。データはタプルの基本構文[{キー: 値}]を用いた場合と変わりがありません。\n",
+        "iex> list = [{:a, 1}, {:b, 2}]\n",
+        "[a: 1, b: 2]\n",
+        "iex> list == [a: 1, b: 2]\n",
+        "true\n",
+        "キーワードリストはリストとして操作できます。たとえば、別のキーワードリストの要素を加えたいとき使うのは++/2演算子です。\n",
+        "iex> list ++ [c: 3]\n",
+        "[a: 1, b: 2, c: 3]\n",
+        "iex> [a: 0] ++ list\n",
+        "[a: 0, a: 1, b: 2]\n",
+        "リストに同じキーがあるとき、キーの参照は位置が前の要素を取り出します。\n",
+        "iex> new_list = [a: 0] ++ list\n",
+        "[a: 0, a: 1, b: 2]\n",
+        "iex> new_list[:a]\n",
+        "0\n",
+        "キーワードリストのキーにはつぎの3つの特徴があります。\n",
         "\n",
-        "[25309, 21843]\n",
-        "!elixir -e 'IO.inspect to_string('hello')'\n",
+        "アトムである\n",
+        "順序づけされる\n",
+        "一意でなくてよい\n",
+        "たとえば、ElixirのライブラリEctoは、キーワードリストでデータベースクエリが書ける優れたDSLを提供しています。\n",
+        "query = from w in Weather,\n",
+        "      where: w.prcp > 0,\n",
+        "      where: w.temp < 20,\n",
+        "     select: w\n",
+        "Elixirでは、キーワードリストは関数にオプションを渡すときの標準の仕組みとなっています。if/2マクロのつぎの構文はその例です(「Elixir入門 05: 条件 - case/cond/if」「do/endブロック」参照)。\n",
+        "iex> if(false, do: :this, else: :that)\n",
+        ":that\n",
+        ":doと:elseはひとつのキーワードリストの要素です。したがって、つぎのように書き替えられます。一般に、キーワードリストが関数の最後の引数のとき、角かっこ[]は省けるのです。\n",
+        "iex> if(false, [do: :this, else: :that])\n",
+        ":that\n",
+        "もちろん、つぎのようにも書けます。\n",
+        "iex> if(false, [{:do, :this}, {:else, :that}])\n",
+        ":that\n",
+        "キーワードリストにもパターンマッチングは使えます。けれど、要素の数とその順序までマッチしなければなりません。そのため、実際に用いられることは少ないでしょう。\n",
+        "iex> [a: a] = [a: 1]\n",
+        "[a: 1]\n",
+        "iex> a\n",
+        "1\n",
+        "iex> [a: a] = [a: 1, b: 2]\n",
+        "** (MatchError) no match of right hand side value: [a: 1, b: 2]\n",
+        "iex> [b: b, a: a] = [a: 1, b: 2]\n",
+        "** (MatchError) no match of right hand side value: [a: 1, b: 2]\n",
+        "キーワードリストを操作するために、ElixirにはKeywordモジュールが備わっています。ただ、ご注意いただきたいのは、キーワードリストはリストだということです。パフォーマンスについては、リストと同じ考慮が要ります。キーを探したり、要素を数えたりするのは、リストが長くなるほど時間がかかるということです。そのため、キーワードリストは、おもにオプションの値を渡すのに用いられます。多くの要素を納めたいときや、キーを一意にしたいときには、マップを使うのがよいでしょう。\n",
         "\n",
-        "\"hello\"\n",
-        "!elixir -e 'IO.inspect to_string([25309, 21843])'\n",
+        "マップ\n",
+        "Elixirでキーと値の組みを納めるデータ構造として、お勧めするのはマップです。マップは%{}/2の構文でつくります。\n",
+        "iex> map = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> map[:a]\n",
+        "1\n",
+        "iex> map[2]\n",
+        ":b\n",
+        "iex> map[:c]\n",
+        "nil\n",
+        "リストと比べて、マップのキーにはつぎの特徴があります。\n",
         "\n",
-        "\"拝啓\"\n",
-        "!elixir -e 'IO.inspect to_string(:hello)'\n",
+        "どのようなデータ型でも使える\n",
+        "順序は問わない\n",
+        "キーワードリストとは異なり、パターンマッチングはマップではとても有用です。マップのパターンは、サブセットとマッチします。つまり、パターンの中に含まれるキーさえマッチしていればよいのです。したがって、空のマップ%{}はすべてのマップにマッチします。\n",
+        "iex> %{} = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> %{:a => a} = %{2 => :b, :a => 1}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> a\n",
+        "1\n",
+        "iex> %{:c => c} = %{:a => 1, 2 => :b}\n",
+        "** (MatchError) no match of right hand side value: %{2 => :b, :a => 1}\n",
+        "変数は参照やパターンマッチング、あるいはマップに加えるキーにも使えます。\n",
+        "iex> n = 1\n",
+        "1\n",
+        "iex> map = %{n => :one}\n",
+        "%{1 => :one}\n",
+        "iex> map[n]\n",
+        ":one\n",
+        "iex> %{^n => :one} = %{1 => :one, 2 => :two, 3 => :three}\n",
+        "%{1 => :one, 2 => :two, 3 => :three}\n",
+        "モジュールMapには、Keywordと似た便利な関数が備わっています。つぎのコードは、関数Map.get/3(第3引数はデフォルトnil)とMap.put/3およびMap.to_list/1を使った例です。\n",
+        "iex> map = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> Map.get(map, :a)\n",
+        "1\n",
+        "iex> Map.put(map, :c, 3)\n",
+        "%{2 => :b, :a => 1, :c => 3}\n",
+        "iex> Map.to_list(map)\n",
+        "[{2, :b}, {:a, 1}]\n",
+        "マップのキーの値は、|を用いたつぎの構文で変えられます。ただし、キーはマップにすでに備わっていなければなりません。つまり、この構文で新たなキーは加えられないということです。\n",
+        "iex> map = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> %{map | 2 => :two}\n",
+        "%{2 => :two, :a => 1}\n",
+        "iex> %{map | :c => 3}\n",
+        "** (KeyError) key :c not found in: %{2 => :b, :a => 1}\n",
+        "    (stdlib) :maps.update(:c, 3, %{2 => :b, :a => 1})\n",
+        "    (stdlib) erl_eval.erl:255: anonymous fn/2 in :erl_eval.expr/5\n",
+        "    (stdlib) lists.erl:1263: :lists.foldl/3\n",
+        "キーを加えるときはMap.put/3関数をお使いください。\n",
+        "iex> map = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> Map.put(map, :c, 3)\n",
+        "%{2 => :b, :a => 1, :c => 3}\n",
+        "キーが重複したときは、あとの値で上書きされます。\n",
+        "iex> %{:a => 1, 2 => :b, :a => :one}\n",
+        "%{2 => :b, :a => :one}\n",
+        "マップの中のキーがすべてアトムの場合は、つぎのように出力されます。\n",
+        "iex> %{:a => 1, :b => 2}\n",
+        "%{a: 1, b: 2}\n",
+        "そして、この簡略な構文は、マップをつくるときにも使えるのです。また、アトムのキーはドット.でも参照できます。\n",
+        "ie> map = %{:a => 1, 2 => :b}\n",
+        "%{2 => :b, :a => 1}\n",
+        "iex> map.a\n",
+        "1\n",
+        "iex> map.2\n",
+        "** (SyntaxError) iex:15: syntax error before: \"2\"\n",
+        "iex> map[2]\n",
+        ":b\n",
+        "iex> map.c\n",
+        "** (KeyError) key :c not found in: %{2 => :b, :a => 1}\n",
+        "Elixirの開発者にはMapモジュールの関数より、map.fieldの構文とパターンマッチングでマップを扱う方が好まれるようです。はっきりとわかりやすいスタイルでプログラミングができるからでしょう(「Writing assertive code with Elixir」参照)。\n",
         "\n",
-        "\"hello\"\n",
-        "!elixir -e 'IO.inspect to_string(1)'\n",
+        "入れ子のデータ構造\n",
+        "マップやキーワードリストは、それぞれ入れ子にできます。また、マップとキーワードリストを互いに入れ子にすることも可能です。値はそれぞれの構文を組み合わせて得られます。\n",
+        "iex> users = [\n",
+        "...>   john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]},\n",
+        "...>   mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}\n",
+        "...> ]\n",
+        "[\n",
+        "  john: %{age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
+        "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
+        "]\n",
+        "iex> users[:mary]\n",
+        "%{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
+        "iex> users[:john].age\n",
+        "27\n",
+        "値を書き替えるにはput_in/2を用います。\n",
+        "iex> users = put_in(users[:john].age, 31)\n",
+        "[\n",
+        "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
+        "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
+        "]\n",
+        "iex> users[:john].age\n",
+        "31\n",
+        "update_in/2マクロは、第1引数の値を第2引に数渡した関数で処理します。\n",
+        "iex> users = update_in(users[:mary].languages, fn languages ->\n",
+        "...>   List.delete(languages, \"Clojure\")\n",
+        "...> end)\n",
+        "[\n",
+        "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
+        "  mary: %{age: 29, languages: [\"Elixir\", \"F#\"], name: \"Mary\"}\n",
+        "]\n",
+        "iex> users[:mary].languages\n",
+        "[\"Elixir\", \"F#\"]\n",
+        "get_and_update_in/2\n",
+        "put_in/3\n",
+        "update_in/3\n",
+        "get_and_update_in/3\n",
         "\n",
-        "\"1\"\n",
-        "\n",
-        "文字列つまりバイナリをつなぐには<>/2演算子を用いました。けれど、文字リストは++/2演算子で結ばなければなりません。\n",
-        "!elixir -e 'IO.inspect 'this ' <> 'fails''\n",
-        "\n",
-        "** (CompileError) iex:n: invalid literal 'this ' in <<>>\n",
-        "    (elixir) src/elixir_bitstring.erl:19: :elixir_bitstring.expand/6\n",
-        "    (elixir) src/elixir_bitstring.erl:12: :elixir_bitstring.expand/4\n",
-        "    (elixir) expanding macro: Kernel.<>/2\n",
-        "    iex:n: (file)\n",
-        "!elixir -e 'IO.inspect 'this ' ++ 'works''\n",
-        "\n",
-        "'this works'\n",
-        "!elixir -e 'IO.inspect \"he\" ++ \"llo\"'\n",
-        "\n",
-        "** (ArgumentError) argument error\n",
-        "    :erlang.++(\"he\", \"llo\")\n",
-        "!elixir -e 'IO.inspect \"he\" <> \"llo\"'\n",
-        "\n",
-        "\"hello\"\n"
+        "Elixir入門もくじ\n",
+        "Elixir入門 01: コードを書いて試してみる\n",
+        "Elixir入門 02: 型の基本\n",
+        "Elixir入門 03: 演算子の基本\n",
+        "Elixir入門 04: パターンマッチング\n",
+        "Elixir入門 05: 条件 - case/cond/if\n",
+        "Elixir入門 06: バイナリと文字列および文字リスト\n",
+        "Elixir入門 07: キーワードリストとマップ\n",
+        "Elixir入門 08: モジュールと関数\n",
+        "Elixir入門 09: 再帰\n",
+        "Elixir入門 10: EnumとStream\n",
+        "Elixir入門 11: プロセス\n",
+        "Elixir入門 12: 入出力とファイルシステム\n",
+        "Elixir入門 13: aliasとrequireおよびimport\n",
+        "Elixir入門 14: モジュールの属性\n",
+        "Elixir入門 15: 構造体\n",
+        "Elixir入門 16: プロトコル\n",
+        "Elixir入門 17: 内包表記\n",
+        "Elixir入門 18: シギル\n",
+        "Elixir入門 19: tryとcatchおよびrescue\n",
+        "Elixir入門 20: 型の仕様とビヘイビア\n",
+        "Elixir入門 21: デバッグ\n",
+        "Elixir入門 22: Erlangライブラリ\n",
+        "Elixir入門 23: つぎのステップ\n",
+        "番外\n",
+        "Elixir入門: Plugを使うには\n"
       ],
       "execution_count": null,
       "outputs": []
