--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOb4lDGRBIhjM/H6bpktetM",
+      "authorship_tag": "ABX9TyNy3FysoLt+hhWNM0JMANx+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2253,10 +2253,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vcGwvysjrI-A",
-        "outputId": "7a3ef3f8-47ff-41a4-c608-c206c86c3a38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7a3ef3f8-47ff-41a4-c608-c206c86c3a38"
       },
       "source": [
         "!elixir -e 'IO.inspect to_charlist(\"hello\")' #=> 'hello'\n",
@@ -2266,7 +2266,7 @@
         "!elixir -e 'IO.inspect to_string(:hello)' #=> \"hello\"\n",
         "!elixir -e 'IO.inspect to_string(1)' #=> \"1\""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,16 +2296,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "udVP1fBcxf6H",
-        "outputId": "b9c2bb6d-72f9-4f1e-af58-98c17ddd98a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b9c2bb6d-72f9-4f1e-af58-98c17ddd98a8"
       },
       "source": [
         "!elixir -e \"IO.inspect 'this ' ++ 'works'\" #=> 'this works'\n",
         "!elixir -e 'IO.inspect \"he\" <> \"llo\"' #=> \"hello\""
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2332,29 +2332,46 @@
         "id": "2VGV7B-LtNR0"
       },
       "source": [
-        "# キーワードリストとマップ"
+        "# キーワードリストとマップ\n",
+        "\n",
+        "いわゆる連想配列 associative array、ハッシュ、ディクショナリーと呼ばれるものの exlixir 版がキーワードとマップである。\n",
+        "\n",
+        "キーワードリストは最初の要素がアトムのタプルからなる特別なリストで、関数にオプションを渡すときに用いる。\n",
+        "\n",
+        "キーワードリストの特徴\n",
+        "\n",
+        "マップの特徴\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4gRIGbwjs4sW"
+        "id": "Ol_6MTCA6GVr"
       },
       "source": [
-        "\n",
-        "Elixir入門 07: キーワードリストとマップ\n",
-        "#elixir #webdev #tutorial #programming\n",
-        "gumitech profile image\n",
-        "gumi TECH\n",
-        "2018年10月30日 ・Updated on 2019年1月24日 ・4 min read\n",
-        "本稿はElixir公式サイトの許諾を得て「Keyword lists and maps」の解説にもとづき、加筆補正を加えてElixirのキーと値を関連づけたデータ構造についてご説明します。\n",
-        "\n",
-        "値をキーに関連づけたデータ構造として、\n",
-        "Elixirにはキーワードリストとマップが備わっています。\n",
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4gRIGbwjs4sW",
+        "outputId": "196ab5ed-9c99-4be7-e596-9c117cf7c213",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "source": [
         "他の言語で、ディクショナリーとかハッシュあるいは連想配列などと呼ばれるデータと似た仕組みです。\n",
         "\n",
         "キーワードリスト\n",
-        "多くの関数型プログラミング言語では、キーと値のデータ構造をふたつの項目のタプルで表します。Elixirでは、はじめの項目つまりキーにアトムが用いられた2項目のタプルのリストを、キーワードリストと呼びます。キーワードリストは[キー: 値]の構文で書くと便利です。データはタプルの基本構文[{キー: 値}]を用いた場合と変わりがありません。\n",
+        "多くの関数型プログラミング言語では、キーと値のデータ構造をふたつの項目のタプルで表します。\n",
+        "Elixirでは、はじめの項目つまりキーにアトムが用いられた2項目のタプルのリストを、\n",
+        "キーワードリストと呼びます。キーワードリストは[キー: 値]の構文で書くと便利です。\n",
+        "データはタプルの基本構文[{キー: 値}]を用いた場合と変わりがありません。\n",
         "iex> list = [{:a, 1}, {:b, 2}]\n",
         "[a: 1, b: 2]\n",
         "iex> list == [a: 1, b: 2]\n",
@@ -2379,7 +2396,8 @@
         "      where: w.prcp > 0,\n",
         "      where: w.temp < 20,\n",
         "     select: w\n",
-        "Elixirでは、キーワードリストは関数にオプションを渡すときの標準の仕組みとなっています。if/2マクロのつぎの構文はその例です(「Elixir入門 05: 条件 - case/cond/if」「do/endブロック」参照)。\n",
+        "Elixirでは、キーワードリストは関数にオプションを渡すときの標準の仕組みとなっています。\n",
+        "if/2マクロのつぎの構文はその例です(「Elixir入門 05: 条件 - case/cond/if」「do/endブロック」参照)。\n",
         "iex> if(false, do: :this, else: :that)\n",
         ":that\n",
         ":doと:elseはひとつのキーワードリストの要素です。したがって、つぎのように書き替えられます。一般に、キーワードリストが関数の最後の引数のとき、角かっこ[]は省けるのです。\n",
@@ -2413,7 +2431,10 @@
         "\n",
         "どのようなデータ型でも使える\n",
         "順序は問わない\n",
-        "キーワードリストとは異なり、パターンマッチングはマップではとても有用です。マップのパターンは、サブセットとマッチします。つまり、パターンの中に含まれるキーさえマッチしていればよいのです。したがって、空のマップ%{}はすべてのマップにマッチします。\n",
+        "キーワードリストとは異なり、パターンマッチングはマップではとても有用です。\n",
+        "マップのパターンは、サブセットとマッチします。つまり、\n",
+        "パターンの中に含まれるキーさえマッチしていればよいのです。\n",
+        "したがって、空のマップ%{}はすべてのマップにマッチします。\n",
         "iex> %{} = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
         "iex> %{:a => a} = %{2 => :b, :a => 1}\n",
@@ -2538,8 +2559,17 @@
         "番外\n",
         "Elixir入門: Plugを使うには\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-85017d2cfb39>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    Elixir入門 07: キーワードリストとマップ\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
+          ]
+        }
+      ]
     }
   ]
 }
